# PhotoShare

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  witch
migrations/: env.py
migrations/versions/: 042149f7cfb9_qr_code1.py  0c2823573e9a_develop.py  32eb08b1b181_new_database.py  429971f46b08_qr_code1.py  54032607591c_qr_code1.py  56741664db20_add_qr_code_into_transformed.py  59665fc3d303_add_new_func.py  879caf8154d5_add_tag_comment_cloudinary.py  8dfcbea8006f_qr_code1.py  a620d8655119_rewiew.py  aed157d40218_add_role.py  c066e08d23a7_update_qr_code_url.py  d3cd1293425d_add_rating.py  d402a6b5a50b_add_photo_table.py  dad85ce360ab_qr_code.py  df3d9dbf1db9_init.py
src/configuration/: cloudinary.py  settings.py
src/database/: db.py
src/entity/: models.py
src/repository/: cloudinary_func.py  comment.py  photo.py  qr_code.py  rating.py  search_photo.py  tag.py  user.py
src/routes/: cloudinary_func.py  comment.py  healthchecker.py  photo.py  qrcode.py  rating.py  search_photo.py  user.py
src/schemas/: cloudinary_func.py  coment.py  photo.py  qr_code.py  rating.py  tag.py  user.py
src/services/: auth.py  decorators.py
