[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["HopMaTuB <sunkiper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pydantic = "^2.8.2"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
bcrypt = "^4.1.3"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
passlib = "^1.7.4"
fastapi-jwt-auth = "^0.5.0"
fastapi-mail = "^1.4.1"
cloudinary = "^1.40.0"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
